@@ -17,6 +17,7 @@
 #error "Include libpqxx headers as <pqxx/header>, not <pqxx/header.hxx>."
 #endif
 
+#include <functional>
 #include <ios>
 #include <memory>
 #include <stdexcept>
@@ -238,6 +239,33 @@ public:
    */
   [[nodiscard]] PQXX_PURE size_type affected_rows() const;
 
+// C++20: Concept like std::invocable, but without specifying parameter types.
+  /// Run `func` on each row, passing the row's fields as parameters.
+  /** Goes through the rows from first to last.  Converts a row's fields to
+   * `func`'s respective parameter types, and passes them to `func`.
+   *
+   * If any of your parameter types is `std::string_view`, it refers to the
+   * underlying storage of this `result`.  If any parameter is a _reference,_
+   * it refers to a temporary object that only lives for one iteration of
+   * the loop.
+   *
+   * For example, this queries employee names and salaries from the database
+   * and prints how much each would like to earn instead:
+   * ```cxx
+   *   tx.exec("SELECT name, salary FROM employee").for_each(
+   *       [](std::string_view name, float salary){
+   *           std::cout << name << " would like " << salary * 2 << ".\n";
+   *       })
+   * ```
+   *
+   * If `func` throws an exception, processing stops at that point and
+   * propagates the exception.
+   *
+   * @throws usage_error if `func`'s number of parameters does not match the
+   * number of columns in this result.
+   */
+  template<typename CALLABLE>
+  inline void for_each(CALLABLE &&func) const;
 
 private:
   using data_pointer = std::shared_ptr<internal::pq::PGresult const>;
