@@ -50,7 +50,6 @@ namespace pqxx
 namespace pqxx::internal
 {
 
-
 // C++20: Retire wrapper.
 /// Same as `std::cmp_less`, or a workaround where that's not available.
 template<typename LEFT, typename RIGHT>
@@ -459,5 +458,48 @@ template<typename T> auto ssize(T const &c)
  * header doesn't work, so we must be careful about including it.
  */
 void PQXX_LIBEXPORT wait_for(unsigned int microseconds);
+
+
+/// Helper for determining a function's parameter types.
+/** This function has no definition.  It's not meant to be actually called. 
+ * It's just there for pattern-matching in the compiler, so we can use its
+ * hypothetical return value.
+ */
+template<typename RETURN, typename... ARGS>
+std::tuple<ARGS...> args_f(RETURN (&func)(ARGS...));
+
+
+/// Helper for determining a `std::function`'s parameter types.
+/** This function has no definition.  It's not meant to be actually called. 
+ * It's just there for pattern-matching in the compiler, so we can use its
+ * hypothetical return value.
+ */
+template<typename RETURN, typename... ARGS>
+std::tuple<ARGS...> args_f(std::function<RETURN(ARGS...)>);
+
+
+/// Helper for determining a member function's parameter types.
+template<typename CLASS, typename RETURN, typename... ARGS>
+std::tuple<ARGS...> member_args_f(RETURN (CLASS::*)(ARGS...));
+
+
+/// Helper for determining a const member function's parameter types.
+template<typename CLASS, typename RETURN, typename... ARGS>
+std::tuple<ARGS...> member_args_f(RETURN (CLASS::*)(ARGS...) const);
+
+
+/// Helper for determining a callable type's parameter types.
+/** This specialisation should work for lambdas.
+ *
+ * This function has no definition.  It's not meant to be actually called. 
+ * It's just there for pattern-matching in the compiler, so we can use its
+ * hypothetical return value.
+ */
+template<typename CALLABLE>
+auto args_f(CALLABLE const &f) -> decltype(member_args_f(&CALLABLE::operator()));
+
+
+/// A callable's parameter types, as a tuple.
+template<typename CALLABLE> using args_t = decltype(args_f(std::declval<CALLABLE>()));
 } // namespace pqxx::internal
 #endif
