@@ -1,5 +1,6 @@
 7.7.1
- - Don't try to set C++ version in `configure`.  User can set compiler options.
+ - When you build libpqxx, configure the compiler's C++ version yourself!
+ - New `result::for_each()`: simple iteration and conversion of rows.
  - Finally fix a long-standing silly warning in autogen.
  - Fix `digit_to_number` not being found on some comilers.  (#518, #519)
  - In audit mode, define `_FORTIFY_SOURCE` to enable some extra checks.
